--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@tanstack/react-query": "^5.59.15",
+		"@tanstack/react-query-devtools": "^5.59.15",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"hono": "^4.6.5",
