--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"biome": "biome check --write ."
+		"format": "biome check --write ."
 	},
 	"dependencies": {
 		"@radix-ui/react-icons": "^1.3.0",
