--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"format": "biome check --write ."
 	},
 	"dependencies": {
+		"@hono/zod-validator": "^0.4.1",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
@@ -26,7 +27,8 @@
 		"react-dom": "^18",
 		"react-icons": "^5.3.0",
 		"tailwind-merge": "^2.5.3",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.3",
